--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
     -->
     <title>React App - Yomimasu</title>
   </head>
-  <body>
+  <body id="bootstrap-overrides">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
